# eval-framework

./: .buildinfo  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  Dockerfile_codebench  README.html  README.md  THIRD_PARTY.md  THIRD_PARTY_LICENSES.md  add_new_benchmark_guide.html  benchmarks_and_metrics.html  cli_usage.html  completion_task_guide.html  controlling_upload_results.html  docker_guide.html  evaluate_huggingface_model.html  genindex.html  index.html  installation.html  loglikelihood_task_guide.html  mkdocs.yml  model_arguments.html  objects.inv  overview_dataloading.html  py-modindex.html  pyproject.toml  python_licenses.py  release-please-config.json  search.html  searchindex.js  task_suites.html  testing.html  understanding_results_guide.html  (+3 more)
.doctrees/: CONTRIBUTING.doctree  README.doctree  add_new_benchmark_guide.doctree  benchmarks_and_metrics.doctree  cli_usage.doctree  completion_task_guide.doctree  controlling_upload_results.doctree  docker_guide.doctree  evaluate_huggingface_model.doctree  index.doctree  installation.doctree  loglikelihood_task_guide.doctree  model_arguments.doctree  overview_dataloading.doctree  task_suites.doctree  testing.doctree  understanding_results_guide.doctree  using_determined.doctree  utilities.doctree  wandb_integration.doctree
.doctrees/api/: index.doctree
.doctrees/tasks/: AIME2024.doctree  AIME2025.doctree  AIME2026.doctree  ARC.doctree  ARC_DE.doctree  ARC_EU20_DE.doctree  ARC_EU20_FR.doctree  ARC_FI.doctree  ARC_IDK.doctree  ARC_OLMES.doctree  AidanBench.doctree  AidanBenchOriginal.doctree  BELEBELE.doctree  BalancedCOPA.doctree  BigCodeBench.doctree  BigCodeBenchHard.doctree  BigCodeBenchHardInstruct.doctree  BigCodeBenchInstruct.doctree  BigCodeBench_OLMES.doctree  CASEHOLD.doctree  COPA.doctree  COPAEvalHarness.doctree  COPA_IDK.doctree  COPA_IDKEvalHarness.doctree  COPA_OLMES.doctree  ChemBench.doctree  CommonsenseQACloze.doctree  CommonsenseQAFullTextCloze.doctree  CommonsenseQAMC.doctree  CommonsenseQAMC_OLMES.doctree  DUC_ABSTRACTIVE.doctree  DUC_EXTRACTIVE.doctree  DropCloze.doctree  DropCompletion.doctree  DropCompletion_OLMES.doctree  DropMC.doctree  DropMC_OLMES.doctree  Flores200.doctree  FloresPlus.doctree  FullTextMMLU.doctree  (+146 more)
.github/: issue_template.md  pull_request_template.md  renovate.json
.github/workflows/: bump_version.yaml  ci-main.yml  ci-pull-request-target.yml  ci-pull-request.yml  ci.yml  claude-code-review.yaml  docs_generation.yml  generate_task_docs.yml  nightly_cache_build.yml  nightly_docker_cache_build.yml  nightly_hf_cache_rebuild.yml  nightly_hf_datasets_cache.yml  nightly_uv_cache_rebuild.yml  public-docker.yaml  release.yml  release_please.yml  release_please_auto_merge.yml  renovate.yaml  tests.yml  third_party_licenses.yml  weekly_dataset_revisions.yml
_downloads/0688aad6a1087b7595fcf7e5893c620a/: balancedcopa.py
_downloads/09d1a4f378dd5705295f9628d16256e2/: zero_scrolls.py
_downloads/103ddbd288bf44a36ca6785180146a22/: piqa.py
_downloads/12caa6ba3da9c187f9d47da4fa6edd70/: duc.py
_downloads/17c3260ff7203547a9802fa9cce8d20a/: global_mmlu.py
_downloads/22372fae8dbfe5f4b6d8bbb45d3daa5e/: aidanbench.py
_downloads/2cfac864e2062d0c4a723d10621adecf/: mmlu.py
_downloads/2f24fcccb4b2e5abe4e0d861f240b988/: math_reasoning.py
_downloads/37cd95638330a9b0a99d532380f11cf1/: truthfulqa.py
_downloads/3a328592f4b753359bc7ef7166b7e576/: copa.py
_modules/: collections.html  functools.html  index.html  pathlib.html  re.html
_sources/: CONTRIBUTING.md.txt  README.md.txt  add_new_benchmark_guide.md.txt  benchmarks_and_metrics.md.txt  cli_usage.md.txt  completion_task_guide.md.txt  docker_guide.md.txt  evaluate_huggingface_model.md.txt  index.rst.txt  installation.md.txt  model_arguments.md.txt  overview_dataloading.md.txt  task_suites.md.txt  testing.md.txt  using_determined.md.txt
api/: index.html
changelog/: README.md  changelog.py
docs/: README.md  add_new_benchmark_guide.md  benchmarks_and_metrics.md  cli_usage.md  completion_task_guide.md  conf.py  controlling_upload_results.md  docker_guide.md  docker_guide_new.md  evaluate_huggingface_model.md  index.md  index.rst  installation.md  llm_as_judge_guide.md  loglikelihood_task_guide.md  model_arguments.md  quickstart.md  task_naming.md  testing.md  understanding_results_guide.md  using_determined.md  utilities.md  wandb_integration.md
docs/tasks/: ARC.md  (+215 more)
local-vllm-server/: README.md  pyproject.toml
local-vllm-server/src/local_vllm_server/: __init__.py  server.py
local-vllm-server/tests/: test_local_vllm_server.py
scripts/: update_hf_datasets.py  warm_dataset_cache.py
tasks/: AIME2024.html  AIME2025.html  AIME2026.html  ARC.html  ARC_DE.html  ARC_EU20_DE.html  ARC_EU20_FR.html  ARC_FI.html  ARC_IDK.html  ARC_OLMES.html  AidanBench.html  AidanBenchOriginal.html  BELEBELE.html  BalancedCOPA.html  BigCodeBench.html  BigCodeBenchHard.html  BigCodeBenchHardInstruct.html  BigCodeBenchInstruct.html  BigCodeBench_OLMES.html  CASEHOLD.html  COPA.html  COPAEvalHarness.html  COPA_IDK.html  COPA_IDKEvalHarness.html  COPA_OLMES.html  ChemBench.html  CommonsenseQACloze.html  CommonsenseQAFullTextCloze.html  CommonsenseQAMC.html  CommonsenseQAMC_OLMES.html  DUC_ABSTRACTIVE.html  DUC_EXTRACTIVE.html  DropCloze.html  DropCompletion.html  DropCompletion_OLMES.html  DropMC.html  DropMC_OLMES.html  Flores200.html  FloresPlus.html  FullTextMMLU.html  (+146 more)
tests/: conftest.py  mock_wandb.py  test_base_task.py  test_context.py  test_end_to_end.py  test_eval_config_validation.py  test_evaluation_generator.py  test_file_ops.py  test_hf_processor.py  test_hf_uploader.py  test_llm_judge.py  test_preemption.py  test_registry_model_integration.py  test_response_generator.py  test_results_processor.py  test_run.py  test_sampling_params_integration.py  test_task_names.py  test_user_task_registration.py  test_wandb_mock.py  test_wandb_uploader.py  utils.py
utils/: dependency_check.sh  generate-task-docs.py  inspect-jsonl.py  plot-results.py
(+818 files in other folders)
